Rewrote triggers, requirements and registering aforementioned things